--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@ng-select/ng-select": "^12.0.7",
+    "axios": "^1.7.2",
     "bootstrap-italia": "^2.8.8",
     "class-variance-authority": "^0.7.0",
     "rxjs": "~7.8.0",
